--- a/index.html
+++ b/index.html
@@ -6,12 +6,12 @@
     <title>Main</title>
 <body>
    <div id="header">
-        <img id="logo" src="" alt="VALVE">
+        <img id="logo" src="/Assets/Images/Valve.png" alt="VALVE">
         <ul id="menu">
-            <li><a href=""></a></li>
-            <li><a href=""></a></li>
-            <li><a href=""></a></li>
-            <li><a href=""></a></li>
+            <li><a href="">Home</a></li>
+            <li><a href="">About</a></li>
+            <li><a href="">Steam</a></li>
+            <li><a href="">Games</a></li>
         </ul>
    </div>
    <div id="content">
