--- a/index.html
+++ b/index.html
@@ -4,9 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Main</title>
+    <link rel="stylesheet" href="main.css">
 <body>
    <div id="header">
-        <img id="logo" src="/Assets/Images/Valve.png" alt="VALVE">
+        <img id="logo" src="Assets/Images/Valve_logo.svg" alt="VALVE">
         <ul id="menu">
             <li><a href="">Home</a></li>
             <li><a href="">About</a></li>
