--- a/index.html
+++ b/index.html
@@ -9,17 +9,61 @@
    <div id="header">
         <img id="logo" src="Assets/Images/Valve_logo.svg" alt="VALVE">
         <ul id="menu">
-            <li><a href="">Home</a></li>
-            <li><a href="">About</a></li>
-            <li><a href="">Steam</a></li>
-            <li><a href="">Games</a></li>
+            <li><a href="#home">Home</a></li>
+            <li><a href="#about">About</a></li>
+            <li><a href="#Steam">Steam</a></li>
+            <li><a href="#Games">Games</a></li>
         </ul>
    </div>
    <div id="content">
-        <div id="home"></div>    
-        <div id="about"></div>
-        <div id="Steam"></div>
-        <div id="Games"></div>
+        <div id="home">
+            <div>
+                <img id="hero" src="Assets/Images/Valve_logo.svg" alt="Valve Corp.">
+                <h1><b>Valve Software</b></h1>
+            </div>
+        </div>    
+        <div id="about">
+            <section class="head">
+                <h1 class="Title"><b>At Valve we make games, Steam, and hardware.</b></h1>
+            </section>
+            <section class="Content">
+                <div class="mini_title">
+                    <h3>Our games attract millions and define genres.</h3>
+                </div>
+                <section class="paragraph">
+                    <p>Valve's debut title, Half-Life, was released in 1998. It won more than 50 game of the year awards, and PC Gamer even called it the Best PC Game Ever. Since then, we've released <a class="link" href="#Games">dozens of titles</a> that changed the world. Today, millions of people play our games every day.</p>
+                    <p>Our earlier titles were built on an innovative engine with world-class gameplay as their paramount goal, and praised by critics as games that revitalized or even invented their genres.</p>
+                </section>
+            </section>
+        </div>4
+        <div id="Steam">
+            <section class="Content">
+                <section>
+                <div class="mini_title">
+                    <h3>Steam</h3>
+                </div>
+                <div>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Qui quasi quo esse tempore autem fugiat quidem nostrum, optio ipsum sit minima exercitationem quibusdam, dicta recusandae porro culpa amet architecto cum!</div>
+                </section>
+                <section>
+                    <img id="steam_icon" src="Assets/Images/Steam_icon_logo.svg" alt="Steam icon">
+                </section>
+            </section>
+        </div>
+        <div id="Games">
+            <section class="Content">
+                <div class="mini_title">
+                    <h3>Valve's debut title, Half-Life, was released in 1998. Since then, we've released dozens of titles that changed the world (and one that didn't). Today, millions of people play our games every day.</h3>
+                </div>
+                <section id="Games_List">
+                    <div class="Game_item">
+                        <a href="https://store.steampowered.com/app/730/CounterStrike_2/?curator_clanid=4">
+                        <img src="Assets/Images/cs2card.png">
+                        <h4 class="Game_title">CS2</h4>
+                        </a>
+                    </div>
+                </section>
+            </section>
+        </div>
    </div>
    <div id="footer">
     <div id="Contacts"></div>
