--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         </div>4
         <div id="Steam">
             <section class="Content">
-                <section>
+                <section id="about_steam">
                 <div class="mini_title">
                     <h3>Steam</h3>
                 </div>
@@ -58,7 +58,36 @@
                     <div class="Game_item">
                         <a href="https://store.steampowered.com/app/730/CounterStrike_2/?curator_clanid=4">
                         <img src="Assets/Images/cs2card.png">
-                        <h4 class="Game_title">CS2</h4>
+                        <h4 class="Game_title">Counter Strike 2</h4>
+                        </a>
+                    </div>
+                    <div class="Game_item">
+                        <a href="https://store.steampowered.com/developer/valve/list/7/">
+                        <img src="Assets/Images/hl2card.png">
+                        <h4 class="Game_title">Half Life Series</h4></a>
+                    </div>
+                    <div class="Game_item">
+                        <a href="https://store.steampowered.com/developer/valve/list/9/">
+                            <img src="Assets/Images/portalcard.png">
+                            <h4 class="Game_title">Portal Series</h4>
+                        </a>
+                    </div>
+                    <div class="Game_item">
+                        <a href="https://store.steampowered.com/app/440/Team_Fortress_2/?curator_clanid=4">
+                            <img src="Assets/Images/TF2Card.png">
+                            <h4 class="Game_title">Team Fortress 2</h4>
+                        </a>
+                    </div>
+                    <div class="Game_item">
+                        <a href="https://store.steampowered.com/developer/valve/list/10/">
+                            <img src="Assets/Images/Left4Dead_Windows_cover.jpg">
+                            <h4 class="Game_title">Left 4 dead Series</h4>
+                        </a>
+                    </div>
+                    <div class="Game_item">
+                        <a href="https://store.steampowered.com/app/570/Dota_2/">
+                            <img src="Assets/Images/Dota2card.png">
+                            <h4 class="Game_title">Dota 2</h4>
                         </a>
                     </div>
                 </section>
