--- a/index.html
+++ b/index.html
@@ -35,7 +35,8 @@
                     <p>Our earlier titles were built on an innovative engine with world-class gameplay as their paramount goal, and praised by critics as games that revitalized or even invented their genres.</p>
                 </section>
             </section>
-        </div>4
+        </div>
+
         <div id="Steam">
             <section class="Content">
                 <section id="about_steam">
@@ -49,6 +50,7 @@
                 </section>
             </section>
         </div>
+        
         <div id="Games">
             <section class="Content">
                 <div class="mini_title">
