--- a/index.html
+++ b/index.html
@@ -9,17 +9,68 @@
    <div id="header">
         <img id="logo" src="Assets/Images/Valve.png" alt="VALVE">
         <ul id="menu">
-            <li><a href="">Home</a></li>
-            <li><a href="">About</a></li>
-            <li><a href="">Steam</a></li>
-            <li><a href="">Games</a></li>
+            <li><a href="#home">Home</a></li>
+            <li><a href="#about">About</a></li>
+            <li><a href="#Steam">Steam</a></li>
+            <li><a href="#Games">Games</a></li>
         </ul>
    </div>
    <div id="content">
-        <div id="home"></div>    
-        <div id="about"></div>
-        <div id="Steam"></div>
-        <div id="Games"></div>
+        <div id="home">
+            <img src="Assets/Images/Valve_logo.svg">
+            <h1>Valve Software</h1>
+        </div>    
+        <div id="about">
+            <h2>At Valve we make games, Steam, and hardware.</h2>
+            <p>Valve's debut title, Half-Life, was released in 1998. It won more than 50 game of the year awards, and PC Gamer even called it the Best PC Game Ever. Since then, we've released dozens of titles that changed the world. Today, millions of people play our games every day.</p>
+            <p>Our earlier titles were built on an innovative engine with world-class gameplay as their paramount goal, and praised by critics as games that revitalized or even invented their genres.</p>
+        </div>
+        <div id="Steam">
+            <h2>Our platform connects players with the world's greatest entertainment.</h2>
+            <p>We created <a href=https://store.steampowered.com>Steam</a> in 2003 to serve as a digital content distribution channel, before app stores existed. It's since grown and evolved into a platform for thousands of creators and publishers to deliver content and establish direct relationships with their customers. The Steam Community enables millions of players to do likewise, sharing entertainment and ideas, and making friends.</p>
+            <a href="https://store.steampowered.com"><img src="Assets/Images/Steam_icon_logo.svg"></a>
+        </div>
+        <div id="Games">
+            <h1>Featured Game/Series</h1>
+            <div id="game-list">
+                <div class="list-item">
+                    <a href="">                   
+                    <img src="Assets/Images/cs2card.png">
+                    <h3>Counter Strike 2</h3>
+                    </a>
+                </div>
+                <div class="list-item">
+                    <a href="">
+                    <img src="Assets/Images/hl2card.png">
+                    <h3>Half Life Series</h3>
+                    </a>
+                </div>
+                <div class="list-item">
+                    <a href="">
+                    <img src="Assets/Images/portalcard.png">
+                    <h3>Portal Series</h3>
+                    </a>
+                </div>
+                <div class="list-item">
+                    <a href="">
+                    <img src="Assets/Images/Dota2card.png">
+                    <h3>Dota 2</h3>
+                    </a> 
+                </div>
+                <div class="list-item">
+                    <a href="">
+                    <img src="Assets/Images/TF2Card.png">
+                    <h3>Team Fortress 2</h3>
+                    </a>
+                </div>
+                <div class="list-item">
+                    <a href="">
+                    <img src="Assets/Images/Left4Dead_Windows_cover.jpg">
+                    <h3>Left 4 Dead Series</h3>
+                    </a>
+                </div>
+            </div>
+        </div>
    </div>
    <div id="footer">
     <div id="Contacts"></div>
