--- a/index.html
+++ b/index.html
@@ -43,14 +43,15 @@
         <div id="Steam">
             <div class="Content">
                 <div id="about_steam">
-                <div class="mini_title">
-                    <h3>Steam</h3>
+                    <img src="Assets/Images/Steam_2016_logo_black.svg">
+
+                    <h1>the ultimate destination for playing, discussing, and creating games.</h1>
+
+                    <a href="https://store.steampowered.com/about"><button id="download_steam"><h2>Install Steam</h2></button></a>
                 </div>
-                <div>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Qui quasi quo esse tempore autem fugiat quidem nostrum, optio ipsum sit minima exercitationem quibusdam, dicta recusandae porro culpa amet architecto cum!</div>
-                </div>
-                <div>
-                    <img id="steam_icon" src="Assets/Images/Steam_icon_logo.svg" alt="Steam icon">
-                </div>
+            </div>
+            <div>
+                <img id="steam_icon" src="Assets/Images/Steam_icon_logo.svg" alt="Steam icon">
             </div>
         </div>
         
