--- a/index.html
+++ b/index.html
@@ -102,8 +102,14 @@
 
    </div>
    <div id="footer">
-    <div id="Contacts"></div>
-    <div id="Copyright"></div>
-   </div>
+        <div id="wrap">
+            <div id="Contacts">
+                <p>This website is made by AliYa for the purpose of learning Web making with html and css</p>
+                <sub>contact(s) : <a>kuronekoy520@gmail.com</a></sub>
+            </div>
+            <div class="Copyright">© 2025 Valve Corporation. All rights reserved. Valve, the Valve logo, Half-Life, the Half-Life logo, the Lambda logo, Steam, the Steam logo, Team Fortress, the Team Fortress logo, Opposing Force, Day of Defeat, the Day of Defeat logo, Counter-Strike, the Counter-Strike logo, Source, the Source logo, Counter-Strike: Condition Zero, Portal, the Portal logo, Dota, the Dota 2 logo, and Defense of the Ancients are trademarks and/or registered trademarks of Valve Corporation.</div>
+            <div id="Official"><a href="https://www.valvesoftware.com/en/">Official Valve Website</a></div>
+        </div>
+    </div>
 </body>
 </html>
