--- a/index.html
+++ b/index.html
@@ -16,47 +16,51 @@
         </ul>
    </div>
    <div id="content">
+
         <div id="home">
             <div>
                 <img id="hero" src="Assets/Images/Valve_logo.svg" alt="Valve Corp.">
                 <h1><b>Valve Software</b></h1>
             </div>
-        </div>    
+        </div>
+
         <div id="about">
-            <section class="head">
+            <div class="head">
                 <h1 class="Title"><b>At Valve we make games, Steam, and hardware.</b></h1>
-            </section>
-            <section class="Content">
-                <div class="mini_title">
-                    <h3>Our games attract millions and define genres.</h3>
+                <div class="Content">
+                    <div class="mini_title">
+                        <h3>Our games attract millions and define genres.</h3>
+                    </div>
+                    <div class="paragraph">
+                        <p>Valve's debut title, Half-Life, was released in 1998. It won more than 50 game of the year awards, and PC Gamer even called it the Best PC Game Ever. Since then, we've released <a class="link" href="#Games">dozens of titles</a> that changed the world. Today, millions of people play our games every day.</p>
+                        <p>Our earlier titles were built on an innovative engine with world-class gameplay as their paramount goal, and praised by critics as games that revitalized or even invented their genres.</p>
+                    </div>
                 </div>
-                <section class="paragraph">
-                    <p>Valve's debut title, Half-Life, was released in 1998. It won more than 50 game of the year awards, and PC Gamer even called it the Best PC Game Ever. Since then, we've released <a class="link" href="#Games">dozens of titles</a> that changed the world. Today, millions of people play our games every day.</p>
-                    <p>Our earlier titles were built on an innovative engine with world-class gameplay as their paramount goal, and praised by critics as games that revitalized or even invented their genres.</p>
-                </section>
-            </section>
+            </div>
+            <img id="winner" src="Assets/Images/image_1747191151508.png">
         </div>
 
         <div id="Steam">
-            <section class="Content">
-                <section id="about_steam">
-                <div class="mini_title">
-                    <h3>Steam</h3>
+            <div class="Content">
+                <div id="about_steam">
+                    <img src="Assets/Images/Steam_2016_logo_black.svg">
+
+                    <h1>the ultimate destination for playing, discussing, and creating games.</h1>
+
+                    <a href="https://store.steampowered.com/about"><button id="download_steam"><h2>Install Steam</h2></button></a>
                 </div>
-                <div>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Qui quasi quo esse tempore autem fugiat quidem nostrum, optio ipsum sit minima exercitationem quibusdam, dicta recusandae porro culpa amet architecto cum!</div>
-                </section>
-                <section>
-                    <img id="steam_icon" src="Assets/Images/Steam_icon_logo.svg" alt="Steam icon">
-                </section>
-            </section>
+            </div>
+            <div>
+                <img id="steam_icon" src="Assets/Images/Steam_icon_logo.svg" alt="Steam icon">
+            </div>
         </div>
         
         <div id="Games">
-            <section class="Content">
+            <div class="Content">
                 <div class="mini_title">
                     <h3>Valve's debut title, Half-Life, was released in 1998. Since then, we've released dozens of titles that changed the world (and one that didn't). Today, millions of people play our games every day.</h3>
                 </div>
-                <section id="Games_List">
+                <div id="Games_List">
                     <div class="Game_item">
                         <a href="https://store.steampowered.com/app/730/CounterStrike_2/?curator_clanid=4">
                         <img src="Assets/Images/cs2card.png">
@@ -92,13 +96,20 @@
                             <h4 class="Game_title">Dota 2</h4>
                         </a>
                     </div>
-                </section>
-            </section>
+                </div>
+            </div>
         </div>
+
    </div>
    <div id="footer">
-    <div id="Contacts"></div>
-    <div id="Copyright"></div>
-   </div>
+        <div id="wrap">
+            <div id="Contacts">
+                <p>This website is made by AliYa for the purpose of learning Web making with html and css</p>
+                <sub>contact(s) : <a>kuronekoy520@gmail.com</a></sub>
+            </div>
+            <div class="Copyright">© 2025 Valve Corporation. All rights reserved. Valve, the Valve logo, Half-Life, the Half-Life logo, the Lambda logo, Steam, the Steam logo, Team Fortress, the Team Fortress logo, Opposing Force, Day of Defeat, the Day of Defeat logo, Counter-Strike, the Counter-Strike logo, Source, the Source logo, Counter-Strike: Condition Zero, Portal, the Portal logo, Dota, the Dota 2 logo, and Defense of the Ancients are trademarks and/or registered trademarks of Valve Corporation.</div>
+            <div id="Official"><a href="https://www.valvesoftware.com/en/">Official Valve Website</a></div>
+        </div>
+    </div>
 </body>
 </html>
